Deleted get Count functionality
