# service/api/likes.go
@@ -68,62 +68,6 @@ func (rt *_router) GetLikes(w http.ResponseWriter, r *http.Request, ps httproute
 	_ = json.NewEncoder(w).Encode(response)
 }
 
-func (rt *_router) GetLikeCount(w http.ResponseWriter, r *http.Request, ps httprouter.Params) {
-	// Get post from db
-	pid := ps.ByName("pid")
-	if !schemes.ValidId(pid) {
-		rt.baseLogger.Error("PostId (pid) invalid")
-		w.WriteHeader(http.StatusBadRequest)
-		return
-	} else if postExists, err := rt.db.PostExists(pid); err != nil {
-		rt.baseLogger.Error("GetLikeCount: Error while checking for post in db")
-		w.WriteHeader(http.StatusInternalServerError)
-		return
-	} else if !postExists {
-		rt.baseLogger.Error("GetLikeCount: Post doesn't exist in db")
-		w.WriteHeader(http.StatusNotFound)
-		return
-	}
-
-	// Authentification as not banned by the user with userId post.UserId
-	identifier, err := ParseIdentifier(r)
-	if err != nil {
-		rt.baseLogger.WithError(err).Error("GetLikeCount: Failed to parse identifier from reques")
-		w.WriteHeader(http.StatusUnauthorized)
-		return
-	}
-	post, err := rt.db.GetPost(pid)
-	if err != nil {
-		rt.baseLogger.WithError(err).Error("GetLikeCount: Failed to get post from db")
-		w.WriteHeader(http.StatusUnauthorized)
-		return
-	}
-	authorized, err := rt.db.AuthorizeAsNotBanned(identifier, post.UserId)
-	if err != nil {
-		rt.baseLogger.WithError(err).Error("GetLikeCount: Error occured during authorization")
-		w.WriteHeader(http.StatusInternalServerError)
-		return
-	} else if !authorized {
-		rt.baseLogger.Error("GetLikeCount: User unauthorized to access resource")
-		w.WriteHeader(http.StatusUnauthorized)
-		return
-	}
-
-	// Get like count
-	count, err := rt.db.GetLikeCount(pid)
-	if err != nil {
-		rt.baseLogger.WithError(err).Error("GetLikeCount: failed to get like Count from db")
-		w.WriteHeader(http.StatusInternalServerError)
-		return
-	}
-
-	// Send the response
-	var response = GetCountResult{Count: count}
-	w.WriteHeader(http.StatusOK)
-	w.Header().Set("content-type", "application/json")
-	_ = json.NewEncoder(w).Encode(response)
-}
-
 func (rt *_router) hasLikedPost(w http.ResponseWriter, r *http.Request, ps httprouter.Params) {
 	// Get post from db
 	pid := ps.ByName("pid")
